--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -33,7 +33,7 @@
                 <td>@Html.DisplayFor(modelItem => item.so_dien_thoai)</td>
                 <td>@Html.DisplayFor(modelItem => item.dia_chi)</td>
                 <td>
-                    @if (item.vai_tro == "quan_tri")
+                    @if (item.vai_tro == "Quản trị")
                     {
                         <span class="badge bg-danger">Quản trị</span>
                     }
