--- a/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ProjectCDTT_63132701.Models.san_pham>
 @{
-    ViewBag.Title = "lac_Tay";
+    ViewBag.Title = "Bong_Tai";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -12,7 +12,7 @@
 </head>
 
 
-<h2>Lắc Tay Bạc</h2>
+<h2>Bông Tai Bạc</h2>
 
 <div class="filter-container">
     <div class="filter-options">
