--- a/ProjectCDTT_63132701/Views/san_pham/Create.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectCDTT_63132701.Models.san_pham
+﻿@*@model ProjectCDTT_63132701.Models.san_pham
 
 @{
     ViewBag.Title = "Create";
@@ -90,3 +90,4 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+*@
