--- a/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "DichVu";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
+<html>
 <head>
     <!-- Thư viện CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
