--- a/ProjectCDTT_63132701/Views/khach_hang/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectCDTT_63132701.Models.khach_hang
+﻿@model ProjectCDTT_63132701.Models.KhachHang
 
 @{
     ViewBag.Title = "Delete";
@@ -9,55 +9,55 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>khach_hang</h4>
+    <h4>KhachHang</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ho_ten)
+            @Html.DisplayNameFor(model => model.HoTen)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ho_ten)
+            @Html.DisplayFor(model => model.HoTen)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.email)
+            @Html.DisplayFor(model => model.Email)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.mat_khau)
+            @Html.DisplayNameFor(model => model.MatKhau)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.mat_khau)
+            @Html.DisplayFor(model => model.MatKhau)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.so_dien_thoai)
+            @Html.DisplayNameFor(model => model.SoDienThoai)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.so_dien_thoai)
+            @Html.DisplayFor(model => model.SoDienThoai)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.dia_chi)
+            @Html.DisplayNameFor(model => model.DiaChi)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.dia_chi)
+            @Html.DisplayFor(model => model.DiaChi)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.vai_tro)
+            @Html.DisplayNameFor(model => model.VaiTro)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vai_tro)
+            @Html.DisplayFor(model => model.VaiTro)
         </dd>
 
     </dl>
