--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietHoaDon.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietHoaDon.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ProjectCDTN_63132701.Models.chi_tiet_hoa_don>
+﻿@model List<ProjectCDTT_63132701.Models.ChiTietHoaDon>
 @{
     ViewBag.Title = "ChiTietHoaDon";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
