--- a/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
+++ b/ProjectCDTT_63132701/Views/Don_hang/QLDH.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjectCDTT_63132701.Models.don_hang>
+﻿@model IEnumerable<ProjectCDTT_63132701.Models.DonHang>
 @{
     ViewBag.Title = "QLDH";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -30,23 +30,23 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.id)</td>
-                <td>@Html.DisplayFor(modelItem => item.khach_hang.ho_ten)</td>
-                <td>@Html.DisplayFor(modelItem => item.ngay_tao)</td>
-                <td>@Html.DisplayFor(modelItem => item.tong_tien)</td>
-                <td>@Html.DisplayFor(modelItem => item.ma_van_don)</td>
-                <td>@Html.DisplayFor(modelItem => item.trang_thai)</td>
+                <td>@Html.DisplayFor(modelItem => item.MaDH)</td>
+                <td>@Html.DisplayFor(modelItem => item.KhachHang.HoTen)</td>
+                <td>@Html.DisplayFor(modelItem => item.NgayTao)</td>
+                <td>@Html.DisplayFor(modelItem => item.TongTien)</td>
+                <td>@Html.DisplayFor(modelItem => item.MaVanDon)</td>
+                <td>@Html.DisplayFor(modelItem => item.TrangThai)</td>
 @*                <td>
                     <a href="@Url.Action("ChiTietHoaDon", "SanPhams_64130053", new { id = hoaDon.SoHD })"><i class="fa-solid fa-circle-info"></i></a>
                 </td>*@
                 <td>
-                    <a href="@Url.Action("Details", new { id = item.id })" class="btn btn-info btn-sm">
+                    <a href="@Url.Action("Details", new { id = item.MaDH })" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="@Url.Action("Edit", new { id = item.id })" class="btn btn-warning btn-sm">
+                    <a href="@Url.Action("Edit", new { id = item.MaDH })" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i>
                     </a>
-                    <a href="@Url.Action("Delete", new { id = item.id })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
+                    <a href="@Url.Action("Delete", new { id = item.MaDH })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa đơn hàng này?');">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
