--- a/ProjectCDTT_63132701/Views/don_hang/Details.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectCDTT_63132701.Models.don_hang
+﻿@model ProjectCDTT_63132701.Models.DonHang
 
 @{
     ViewBag.Title = "Details";
@@ -8,52 +8,60 @@
 <h2>Details</h2>
 
 <div>
-    <h4>don_hang</h4>
+    <h4>DonHang</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.tong_tien)
+            @Html.DisplayNameFor(model => model.TongTien)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.tong_tien)
+            @Html.DisplayFor(model => model.TongTien)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.trang_thai)
+            @Html.DisplayNameFor(model => model.TrangThai)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.trang_thai)
+            @Html.DisplayFor(model => model.TrangThai)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ngay_tao)
+            @Html.DisplayNameFor(model => model.NgayTao)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ngay_tao)
+            @Html.DisplayFor(model => model.NgayTao)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ma_van_don)
+            @Html.DisplayNameFor(model => model.MaVanDon)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ma_van_don)
+            @Html.DisplayFor(model => model.MaVanDon)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.khach_hang.ho_ten)
+            @Html.DisplayNameFor(model => model.KhachHang.HoTen)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.khach_hang.ho_ten)
+            @Html.DisplayFor(model => model.KhachHang.HoTen)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.HoaDon.TrangThai)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.HoaDon.TrangThai)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.MaDH }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
