--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProjectCDTT_63132701.Models.khach_hang>
+﻿@model IEnumerable<ProjectCDTT_63132701.Models.KhachHang>
 @{
     ViewBag.Title = "QLKH";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -28,12 +28,12 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.ho_ten)</td>
-                <td>@Html.DisplayFor(modelItem => item.email)</td>
-                <td>@Html.DisplayFor(modelItem => item.so_dien_thoai)</td>
-                <td>@Html.DisplayFor(modelItem => item.dia_chi)</td>
+                <td>@Html.DisplayFor(modelItem => item.HoTen)</td>
+                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
+                <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
                 <td>
-                    @if (item.vai_tro == "Quản trị")
+                    @if (item.VaiTro == "Quản trị")
                     {
                         <span class="badge bg-danger">Quản trị</span>
                     }
@@ -43,13 +43,13 @@
                     }
                 </td>
                 <td>
-                    <a href="@Url.Action("Details", new { id = item.id })" class="btn btn-info btn-sm">
+                    <a href="@Url.Action("Details", new { id = item.MaKH })" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="@Url.Action("Edit", new { id = item.id })" class="btn btn-warning btn-sm">
+                    <a href="@Url.Action("Edit", new { id = item.MaKH })" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i>
                     </a>
-                    <a href="@Url.Action("Delete", new { id = item.id })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
+                    <a href="@Url.Action("Delete", new { id = item.MaKH })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa khách hàng này?');">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
