--- a/ProjectCDTT_63132701/Views/shared/_LayoutAdmin.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutAdmin.cshtml
@@ -54,7 +54,7 @@
         <ul class="nav_menu">
 
             <li class="nav-item">
-                @Html.ActionLink("QLSP", "../san_pham/QLSP", new { @class = "nav-link" })
+                @Html.ActionLink("QLSP", "../San_pham/QLSP", new { @class = "nav-link" })
             </li>
             @*<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -69,13 +69,13 @@
             </li>*@
 
             <li class="nav-item">
-                @Html.ActionLink("QLDH", "../san_pham/QLDH", new { @class = "nav-link" })
+                @Html.ActionLink("QLDH", "../Don_hang/QLDH", new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("QLKH", "../khach_hang/QLKH", new { @class = "nav-link" })
+                @Html.ActionLink("QLKH", "../Khach_hang/QLKH", new { @class = "nav-link" })
             </li>
             <li class="nav-item">
-                @Html.ActionLink("QLVC", "../san_pham/QLVC", new { @class = "nav-link" })
+                @Html.ActionLink("QLVC", "../Van_chuyen/QLVC", new { @class = "nav-link" })
             </li>
         </ul>
     </div>
