--- a/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectCDTT_63132701.Models.van_chuyen
+﻿@model ProjectCDTT_63132701.Models.VanChuyen
 
 @{
     ViewBag.Title = "Delete";
@@ -9,55 +9,55 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>van_chuyen</h4>
+    <h4>VanChuyen</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.don_vi_van_chuyen)
+            @Html.DisplayNameFor(model => model.DonViVanChuyen)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.don_vi_van_chuyen)
+            @Html.DisplayFor(model => model.DonViVanChuyen)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.trang_thai)
+            @Html.DisplayNameFor(model => model.TrangThai)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.trang_thai)
+            @Html.DisplayFor(model => model.TrangThai)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ngay_tao)
+            @Html.DisplayNameFor(model => model.NgayTao)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ngay_tao)
+            @Html.DisplayFor(model => model.NgayTao)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.thoi_gian_giao)
+            @Html.DisplayNameFor(model => model.ThoiGianGiao)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.thoi_gian_giao)
+            @Html.DisplayFor(model => model.ThoiGianGiao)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.thoi_gian_nhan)
+            @Html.DisplayNameFor(model => model.ThoiGianNhan)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.thoi_gian_nhan)
+            @Html.DisplayFor(model => model.ThoiGianNhan)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.don_hang.trang_thai)
+            @Html.DisplayNameFor(model => model.DonHang.TrangThai)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.don_hang.trang_thai)
+            @Html.DisplayFor(model => model.DonHang.TrangThai)
         </dd>
 
     </dl>
