--- a/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Bong_Tai.cshtml
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Bông Tai Bạc</li>
+    </ol>
+</nav>
 
 <h2>Bông Tai Bạc</h2>
 
