--- a/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item" style="text-decoration: none;"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Nhẫn Bạc</li>
+    </ol>
+</nav>
 
 <h2>Nhẫn Bạc</h2>
 
@@ -51,7 +57,7 @@
             <div class="product-info">
                 <h3>@sp.TenSP</h3>
                 <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
-   @*     <p class="date">@sp.ngay_tao?.ToString("dd/MM/yyyy")</p>*@
+                @*     <p class="date">@sp.ngay_tao?.ToString("dd/MM/yyyy")</p>*@
                 <button class="btn btn-dark">Mua ngay</button>
             </div>
         </div>
@@ -59,29 +65,29 @@
 </div>
 
 @*<div class="row">
-    @foreach (var item in Model)
-    {
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img src="@Url.Content("~/Images/" + item.AnhSanPham)" class="card-img-top" alt="@item.TenSP">
-                <div class="card-body">
-                    <h5 class="card-title">@item.TenSP</h5>
-                    <p class="card-text">@item.MoTa</p>
-                    <p class="card-text">Giá: @item.DonGia.ToString("N0")</p>
-                    <div class="button-cart d-flex align-items-center">
-                        <a href="@Url.Action("Details", "SanPhams_64130053", new { id = item.MaSP })" class="btn btn-primary"><i class="fas fa-info-circle"></i> </a>
-                        <form method="post" action="@Url.Action("AddToCart", "SanPhams_64130053")">
-                            <input type="hidden" name="MaSP" value="@item.MaSP" />
-                            <input type="hidden" name="SoLuong" value="1" />
-                            <button type="submit" class="btn btn-success m-lg-2">
-                                <i class="fas fa-shopping-cart"></i>
-                            </button>
-                        </form>
+        @foreach (var item in Model)
+        {
+            <div class="col-md-3 mb-3">
+                <div class="card">
+                    <img src="@Url.Content("~/Images/" + item.AnhSanPham)" class="card-img-top" alt="@item.TenSP">
+                    <div class="card-body">
+                        <h5 class="card-title">@item.TenSP</h5>
+                        <p class="card-text">@item.MoTa</p>
+                        <p class="card-text">Giá: @item.DonGia.ToString("N0")</p>
+                        <div class="button-cart d-flex align-items-center">
+                            <a href="@Url.Action("Details", "SanPhams_64130053", new { id = item.MaSP })" class="btn btn-primary"><i class="fas fa-info-circle"></i> </a>
+                            <form method="post" action="@Url.Action("AddToCart", "SanPhams_64130053")">
+                                <input type="hidden" name="MaSP" value="@item.MaSP" />
+                                <input type="hidden" name="SoLuong" value="1" />
+                                <button type="submit" class="btn btn-success m-lg-2">
+                                    <i class="fas fa-shopping-cart"></i>
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    }
-</div>*@
+        }
+    </div>*@
 
 
