--- a/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/GioHang.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
     ViewBag.Title = "GioHang";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
-
+<head>
+    <link rel="stylesheet" href="~/Content/giohang.css" />
+</head>
 <h2>Giỏ hàng</h2>
 
