--- a/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ThuongHieu.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "ThuongHieu";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
 <head>
@@ -45,7 +45,7 @@
     <section class="design-story">
         <div class="container">
             <!-- Thiết kế từ Hàn Quốc -->
-            <div class="row align-items-center mb-5">
+            <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2>THIẾT KẾ ĐỘC QUYỀN TỪ HÀN QUỐC</h2>
                     <p>
