--- a/ProjectCDTT_63132701/Content/styleAdmin.css
+++ b/ProjectCDTT_63132701/Content/styleAdmin.css
@@ -1,8 +1,7 @@
 ﻿/* Header */
 #menu {
-    background-color: #f7f7f7;
+    background-color: #F7F6F2;
     padding: 15px 0;
-    border-bottom: 1px solid #ddd;
 }
 
 /* Tổng thể header */
@@ -72,7 +71,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f7f7f7;
+    background-color: #F7F6F2;
     padding: 10px 0;
 }
 
