--- a/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/sanpham.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item" style="text-decoration: none;"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Nhẫn Bạc</li>
-    </ol>
-</nav>
+<div class="breadcrumb-container">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="@Url.Action("Index", "San_pham")">Trang chủ</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Nhẫn Bạc</li>
+        </ol>
+    </nav>
+</div>
+
 
 <h2>Nhẫn Bạc</h2>
 
@@ -52,15 +54,16 @@
 <div class="product-container">
     @foreach (var sp in Model)
     {
-        <div class="product-card">
-            <img src="@Url.Content("~/Images/" + sp.AnhSanPham)" alt="@sp.TenSP">
-            <div class="product-info">
-                <h3>@sp.TenSP</h3>
-                <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
-                @*     <p class="date">@sp.ngay_tao?.ToString("dd/MM/yyyy")</p>*@
-                <button class="btn btn-dark">Mua ngay</button>
-            </div>
+<a href="@Url.Action("ChiTietSanPham", "San_pham", new { id = sp.MaSP })" class="product-card-link">
+    <div class="product-card">
+        <img src="@Url.Content("~/Images/" + sp.AnhSanPham)" alt="@sp.TenSP">
+        <div class="product-info">
+            <h3>@sp.TenSP</h3>
+            <p class="price">@sp.DonGia.ToString("N0") VNĐ</p>
         </div>
+    </div>
+</a>
+
     }
 </div>
 
