--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = Model.TenSP;
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
-
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/chitietsanpham.css" />
+</head>
 <div class="product-detail">
     <div class="product-image">
         <img src="@Url.Content("~/Images/" + Model.AnhSanPham)" alt="@Model.TenSP">
@@ -15,7 +19,6 @@
         <p class="description">@Model.MoTa</p>
         <p class="stock">Số lượng còn lại: @Model.SoLuong</p>
         <p class="type">Loại bạc: @Model.LoaiBac</p>
-        <button class="btn btn-primary">Thêm vào giỏ hàng</button>
+        <button class="btn btn-dark">Thêm vào giỏ hàng</button>
     </div>
 </div>
-
