--- a/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/sanpham.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/Home.css" />
 </head>
 
 <div class="breadcrumb-container">
