--- a/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
+++ b/ProjectCDTT_63132701/Views/shared/_LayoutUser.cshtml
@@ -40,10 +40,24 @@
                     <i class="far fa-heart"></i> <span>0</span>
                 </div>
                 <div>
-                    <i class="fas fa-shopping-bag"></i> <span>0</span>
+                    <i class="fas fa-shopping-bag"></i>  
+                        <span style="@(Session["CartCount"] != null && (int)Session["CartCount"] > 0 ? "background-color: red; color: white;" : "background-color: #ddd; color: black;")">
+                            @(Session["CartCount"] ?? 0)
+                        </span>
                 </div>
                 <div>
-                    <i class="fa-solid fa-user"></i> 
+                    @if (Session["UserId"] == null)
+                    {
+                        <a href="@Url.Action("Login", "Tai_khoan")" style="text-decoration: none; color: inherit;">
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("Logout", "Tai_khoan")" style="text-decoration: none; color: inherit;">
+                            <i class="fa-solid fa-sign-out-alt"></i>
+                        </a>
+                    }
                 </div>
             </div>
         </div>
