--- a/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Nhan.cshtml
@@ -55,7 +55,7 @@
 <div class="product-container">
     @foreach (var sp in Model)
     {
-<a href="@Url.Action("ChiTietSanPham", "San_pham", new { id = sp.MaSP })" class="product-card-link">
+<a href="@Url.Action("ChiTietSanPham", "San_pham", new { id = sp.MaSP, returnUrl = Request.Url.PathAndQuery  })" class="product-card-link">
     <div class="product-card">
         <img src="@Url.Content("~/Images/" + sp.AnhSanPham)" alt="@sp.TenSP">
         <div class="product-info">
